--- a/index.html
+++ b/index.html
@@ -32,28 +32,24 @@
 
     <!-- top image -->
     <div class="container photo">
-      <img src="img/rover.jpg" />
-      <div class="dot orange wheels">
+      <img src="img/flag.jpg" />
+      <div class="dot purple flag">
         <div class="inner">
           <a href="#" class="close"></a>
           <div class="content">
-            <p>Opportunity drove 28 miles throughout its 15-year tenure on the red planet</p>
+            <p>Steve Weltser, a 53 year-old former homeless New Yorker. Weltser, who witnessed a drug overdose in 2017 in a homeless shelter, says that the shelters can traumatize people.</p>
           </div>
         </div>
       </div>
-      <div class="dot blue camera">
+    </div>
+
+    <div class="container photo">
+      <img src="img/paper.jpg" />
+      <div class="dot pink paper">
         <div class="inner">
           <a href="#" class="close"></a>
           <div class="content">
-            <p>Opportunity sent back many images of rock formations with distinct, defined textures and patterns, indicating water was present on Mars at one time.</p>
-          </div>
-        </div>
-      </div>
-      <div class="dot green solar">
-        <div class="inner">
-          <a href="#" class="close"></a>
-          <div class="content">
-            <p>Opportunity was solar powered. She is believed to have run out of power in the darkness of a dust storm on Mars and now has dust-covered panels, preventing her from recharging.</p>
+            <p>Mike Mims, a Voices Of Community Activists & Leaders (VOCAL-NY) member sharing information about the organization.</p>
           </div>
         </div>
       </div>
