--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- first step to a responsive site -->
-    <title>Mars rover</title>
+    <title>Homeless Interactive</title>
 
     <!-- FONT AWESOME -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
@@ -27,13 +27,22 @@
     <!-- YOUR CONTENT GOES HERE -->
     <!-- headline -->
     <div class="container">
-      <h1>Opportunity: The Mars Rover</h1>
+      <h1>New Yorkers Rally For Homeless</h1>
     </div>
 
     <!-- top image -->
     <div class="container photo">
       <img src="img/flag.jpg" />
-      <div class="dot purple flag">
+      <div class="dot blue flag">
+        <div class="inner">
+          <a href="#" class="close"></a>
+          <div class="content">
+            <p> According to the Coalition for the Homeless, In December 2018, there were 63,498 homeless people, including 15,485 homeless families with 22,899 homeless children, sleeping each night in the New York City municipal shelter system.
+              Families make up nearly three-quarters of the homeless shelter population.</p>
+          </div>
+        </div>
+      </div>
+      <div class="dot purple face">
         <div class="inner">
           <a href="#" class="close"></a>
           <div class="content">
@@ -42,9 +51,16 @@
         </div>
       </div>
     </div>
-
     <div class="container photo">
       <img src="img/paper.jpg" />
+      <div class="dot green crowd">
+        <div class="inner">
+          <a href="#" class="close"></a>
+          <div class="content">
+            <p> Housing advocates outside of Gracie Mansion, rallying to demand Mayor de Blasio dedicate 30,000 units of his affordable housing plan for homeless New Yorkers, including 24,000 units to be created through new construction.</p>
+          </div>
+        </div>
+      </div>
       <div class="dot pink paper">
         <div class="inner">
           <a href="#" class="close"></a>
